<resources>
    <string name="app_name">TicTacToe</string>
    <string name="heading">Welcome to Tic-Tac-Toe</string>
    <string name="grid">Our main grid</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo45">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
</resources>